--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,13 +27,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up GraalVM
-        uses: graalvm/setup-graalvm@v2
+        uses: graalvm/setup-graalvm@v1
         with:
-          version: '22.3.0' # Adjust to your GraalVM version
           java-version: '17'
-
-      - name: Install native-image tool
-        run: gu install native-image
+          distribution: 'graalvm-community'
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          native-image-job-reports: 'true'
 
       - name: Build native image
         run: mvn clean package -Dpackaging=native-image
