--- a/pom.xml
+++ b/pom.xml
@@ -70,13 +70,8 @@
         </dependency>
         <dependency>
             <groupId>com.github.javaparser</groupId>
-            <artifactId>javaparser-symbol-solver-core</artifactId>
+            <artifactId>javaparser-core</artifactId>
             <version>3.25.10</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.jgit</groupId>
-            <artifactId>org.eclipse.jgit</artifactId>
-            <version>5.11.1.202105131744-r</version>
         </dependency>
     </dependencies>
     <build>
