--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
         </dependency>
         <dependency>
             <groupId>com.github.javaparser</groupId>
-            <artifactId>javaparser-core</artifactId>
+            <artifactId>javaparser-symbol-solver-core</artifactId>
             <version>3.25.10</version>
         </dependency>
     </dependencies>
