--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,13 @@
     <parent>
         <groupId>io.micronaut.platform</groupId>
         <artifactId>micronaut-parent</artifactId>
-        <version>4.4.2</version>
+        <version>4.6.2</version>
     </parent>
     <properties>
         <packaging>jar</packaging>
-        <jdk.version>22</jdk.version>
-        <release.version>22</release.version>
-        <micronaut.version>4.4.3</micronaut.version>
+        <jdk.version>23</jdk.version>
+        <release.version>23</release.version>
+        <micronaut.version>4.6.2</micronaut.version>
         <exec.mainClass>de.zorro909.codecheck.GitCommitCodeCheckCommand</exec.mainClass>
     </properties>
 
@@ -73,6 +73,16 @@
             <artifactId>javaparser-symbol-solver-core</artifactId>
             <version>3.26.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.gitlab4j</groupId>
+            <artifactId>gitlab4j-api</artifactId>
+            <version>5.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jgit</groupId>
+            <artifactId>org.eclipse.jgit</artifactId>
+            <version>6.9.0.202403050737-r</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -125,6 +135,7 @@
                         </path>
                     </annotationProcessorPaths>
                     <compilerArgs>
+                        <arg>--enable-preview</arg>
                         <arg>-Amicronaut.processing.group=de.zorro909.codecheck</arg>
                         <arg>-Amicronaut.processing.module=git-commit-code-check</arg>
                     </compilerArgs>
